--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
     <groupId>com.kq</groupId>
     <artifactId>eureka2</artifactId>
     <version>1.0.0</version>
+    <packaging>pom</packaging>
     <modules>
         <module>configserver</module>
         <module>eurekaserver</module>
         <module>eurekaclient</module>
     </modules>
-    <packaging>pom</packaging>
 
     <name>eureka2</name>
     <description>eureka2</description>
@@ -24,6 +24,13 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
     </properties>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.3.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
     <dependencyManagement>
         <dependencies>
@@ -40,7 +47,6 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
